# cudpp

apps/cudpp_testrig/: test_multisplit.cpp
src/cudpp/: CMakeLists.txt
src/cudpp/kernel/: multisplit_kernel.cuh
src/cudpp_hash/: CMakeLists.txt
